--- a/style_index.css
+++ b/style_index.css
@@ -1,30 +1,26 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
+.patient-list {
+    border-collapse: collapse; /* 테이블 셀 경계를 합치도록 설정 */
+    width: 100%; /* 테이블 너비 설정 */
 }
 
-h1 {
-    background-color: #0078d4;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
+.patient {
+    border: 1px solid #ddd; /* 셀 경계 설정 */
+    padding: 8px; /* 셀 안의 여백 설정 */
 }
 
-.post-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin: 20px;
+.patient h2 {
+    margin: 0; /* 헤더(제목)의 위아래 여백 제거 */
 }
 
-.post {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 10px;
-    padding: 10px;
-    width: 300px;
+.patient p {
+    margin: 5px 0; /* 단락 요소의 위아래 여백 설정 */
+}
+
+/* 짝수 행과 홀수 행을 다르게 스타일링할 경우 */
+.patient:nth-child(even) {
+    background-color: #f2f2f2; /* 짝수 행 배경색 설정 */
+}
+
+.patient:nth-child(odd) {
+    background-color: #fff; /* 홀수 행 배경색 설정 */
 }
