--- a/style_index.css
+++ b/style_index.css
@@ -24,3 +24,8 @@
 .patient:nth-child(odd) {
     background-color: #fff; /* 홀수 행 배경색 설정 */
 }
+
+/* 표를 가운데로 정렬 */
+table {
+    margin: 0 auto; /* 좌우 여백을 자동으로 조절하여 표를 가운데로 정렬합니다 */
+}
