--- a/style_index.css
+++ b/style_index.css
@@ -19,7 +19,7 @@
         text-align: left; 
     }
 
-    /* 테두리 설정 (예시: 마우스 호버 시) */
+    /* 테두리 설정 */
     tr:hover {
         background-color: #f5f5f5; 
     }
@@ -34,7 +34,7 @@
         margin-right: 5px; 
     }
 
-    /* 버튼 스타일 (예시: 마우스 호버 시) */
+    /* 버튼 스타일 */
     button:hover {
         background-color: #0056b3; 
     }
