--- a/my.css
+++ b/my.css
@@ -1,9 +1,39 @@
-/* 데스크탑 스타일 */
-@media (min-width: 1024px) {
-    /* 여기에 데스크톱 스타일 정의 */
+/* 타이틀 스타일 */
+h1 {
+    text-align: center;
+    font-size: 36px;
+    color: #007BFF;
+    margin-top: 20px;
 }
 
-/* 모바일 스타일 */
-@media (max-width: 767px) {
-    /* 여기에 모바일 스타일 정의 */
+table {
+    width: 100%;
+    margin: 0 auto;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+
+tr:hover {
+    background-color: #f5f5f5;
+}
+
+
+button {
+    background-color: #007BFF;
+    color: #fff;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+    margin-right: 5px;
+}
+
+
+button:hover {
+    background-color: #0056b3;
 }
